# SignalPilot_AI

./: .gitignore  CLAUDE.md  README.md  RIG-REVIEW-NOTES.md  SignalPilot-continuation-prompt-2026-06-12.md  SignalPilot-continuation-prompt-2026-06-19.md  SignalPilot-continuation-prompt-2026-06-21.md  SignalPilot-continuation-prompt-2026-06-22.md  SignalPilot-v1-Measurement-Spec-4h-Pullback-Plans.md  SignalPilot-v1-continuation-prompt.md  SignalPilot-v1-final-summary-and-next-steps.docx  pyproject.toml  render.yaml
.github/disabled-workflows/: live-paper-test.yml
.github/workflows/: live-paper-test.yml  market-brief.yml  market-check.yml
data/ohlcv/: BTCUSDT_4h.csv  ETHUSDT_4h.csv  SOLUSDT_4h.csv
google_apps_script/: Code.gs
reports/: rig-comparison-2026-06-11.md  rig-comparison-v2-2026-06-11.md  rig-pifagor-2026-06-21.md  rig-trades-v2.csv  rig-trades.csv
scripts/: _ensure-local-install.bat  download-history.bat  evaluate-and-report.bat  run-tests.bat  send-signals-once.bat  setup-telegram-env.bat  show-report.bat  start-hourly-paper-test.bat  start-telegram-bot.bat
src/signalpilot/: __init__.py  __main__.py  apps_script_journal.py  binance.py  brief.py  cli.py  dashboard.py  indicators.py  journal.py  journal_backend.py  live_analyst.py  (+11 more)
tests/: test_apps_script_journal.py  test_binance.py  test_brief.py  test_cli.py  test_indicators.py  test_journal.py  test_journal_backend.py  test_live_analyst.py  test_market_data.py  test_move_alert.py  test_paper.py  test_rig_engine.py  test_rig_pifagor.py  test_signals.py  test_telegram.py  test_telegram_bot.py
(+8 files in other folders)
