[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "signalpilot"
version = "0.1.0"
description = "AI-assisted crypto trading signal MVP for manual decisions"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.24",
    "tzdata",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.35",
]

[project.scripts]
signalpilot = "signalpilot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
